test/invalid/idl/async-iterable-single.webidl
[Exposed=Window]
interface AsyncIterable {
  async iterable<long>;
};
